--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=pgSQLPasswordUser_politbook
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.batch_size=50
