--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.username=politbook_user_pgsql
 spring.datasource.password=pgSQLPasswordUser_politbook
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+#spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.jdbc.batch_size=50
