--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+data.generator=
+#data.generator=mongo,postgres
