--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=spring-boot
 
 #DB properties:
-spring.datasource.url=jdbc:postgresql://localhost/gis_data
-spring.datasource.username=politbook_user_pgsql
-spring.datasource.password=pgSQLPasswordUser_politbook
+spring.datasource.url=jdbc:postgresql://localhost/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #spring.jpa.properties.hibernate.generate_statistics=true
